--- a/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.4 Engineers and Psychologists: A Battle for Designing Jobs.md
+++ b/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.4 Engineers and Psychologists: A Battle for Designing Jobs.md
@@ -1,75 +1,75 @@
-### **Coursera《管理人力与社会资本》Week 2: 任务、工作与工作系统（模块2-工程师与心理学家的博弈）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块2 - 任务、工作与工作系统
 
----
+### 课程2.4 工程师与心理学家的博弈
 
-#### **核心主题**  
 揭示**工程师导向的标准化效率**与**心理学家主张的人本主义设计**之间的冲突，通过真实案例剖析如何通过赋予员工自主权与意义感实现效率与体验的双赢。
 
----
+#### 1. 传统工程导向工作设计的现实困境
 
-### **关键内容提炼**
+- **投资银行初级分析师案例**：  
+  - **任务特征**：重复性表格分析（如Excel数据处理），无意义感（不告知项目背景）、无反馈（仅出错时被指责）、无自主权（强制截止时间）。  
+  - **后果**：高薪难抵低满意度（离职率高、工作质量波动）。  
+- **西南航空乘务员案例**：  
+  - **传统模式**：机械背诵安全须知（联邦航空管理局强制内容）。  
+  - **创新实践**：允许个性化表达（如说唱、互动游戏），在合规框架内释放创造力。  
+  - **效果**：员工满意度↑、乘客体验↑、品牌差异化竞争力↑。  
 
-#### **1. 传统工程导向工作设计的现实困境**  
-• **投资银行初级分析师案例**：  
-  • **任务特征**：重复性表格分析（如Excel数据处理），无意义感（不告知项目背景）、无反馈（仅出错时被指责）、无自主权（强制截止时间）。  
-  • **后果**：高薪难抵低满意度（离职率高、工作质量波动）。  
-• **西南航空乘务员案例**：  
-  • **传统模式**：机械背诵安全须知（联邦航空管理局强制内容）。  
-  • **创新实践**：允许个性化表达（如说唱、互动游戏），在合规框架内释放创造力。  
-  • **效果**：员工满意度↑、乘客体验↑、品牌差异化竞争力↑。  
+#### 2. 工程师与心理学家的设计理念冲突
 
-#### **2. 工程师与心理学家的设计理念冲突**  
-• **工程师视角（泰勒主义遗产）**：  
-  • **目标**：效率最大化（“唯一最优解”）。  
-  • **方法**：时间与动作研究、任务拆解、标准化流程。  
-  • **适用场景**：制造业流水线、基础数据分析。  
-• **心理学家视角（人本主义设计）**：  
-  • **目标**：激发内在动机（自主性、意义感）。  
-  • **方法**：任务多样化、背景透明化、即时反馈。  
-  • **适用场景**：知识工作、服务业、创新驱动型组织。  
+- **工程师视角（泰勒主义遗产）**：  
+  - **目标**：效率最大化（「唯一最优解」）。  
+  - **方法**：时间与动作研究、任务拆解、标准化流程。  
+  - **适用场景**：制造业流水线、基础数据分析。  
+- **心理学家视角（人本主义设计）**：  
+  - **目标**：激发内在动机（自主性、意义感）。  
+  - **方法**：任务多样化、背景透明化、即时反馈。  
+  - **适用场景**：知识工作、服务业、创新驱动型组织。  
 
-#### **3. 历史转折点：从效率危机到人本觉醒**  
-• **Lordstown工厂事件（1970年代通用汽车）**：  
-  • **泰勒式设计极致化**：流水线速度↑、任务重复性↑、工人自主性↓。  
-  • **反噬效应**：蓄意破坏（零件缺失、设备损坏）、质量崩盘（返修停车场）、罢工频发。  
-• **全球竞争压力**：  
-  • **日本车企崛起**：丰田通过“尊重人性”原则（如安灯系统）实现质量与效率双优，迫使欧美企业反思泰勒模式。  
+#### 3. 历史转折点：从效率危机到人本觉醒 
 
-#### **4. 人本主义设计的四大实践路径**  
+- **Lordstown工厂事件（1970年代通用汽车）**：  
+  - **泰勒式设计极致化**：流水线速度↑、任务重复性↑、工人自主性↓。  
+  - **反噬效应**：蓄意破坏（零件缺失、设备损坏）、质量崩盘（返修停车场）、罢工频发。  
+- **全球竞争压力**：  
+  - **日本车企崛起**：丰田通过「尊重人性」原则（如安灯系统）实现质量与效率双优，迫使欧美企业反思泰勒模式。  
+
+#### 4. 人本主义设计的四大实践路径
+
 1. **意义感植入**：  
-   • **案例**：告知分析师“数据用于约旦王国债券发行”，允许列席客户会议。  
+   - **案例**：告知分析师「数据用于约旦王国债券发行」，允许列席客户会议。  
 2. **碎片任务整合**：  
-   • **方法**：周内轮换分析类型（如财务建模→市场调研），避免单一任务麻木。  
+   - **方法**：周内轮换分析类型（如财务建模→市场调研），避免单一任务麻木。  
 3. **即时反馈机制**：  
-   • **工具**：每日质量评分看板、客户满意度实时推送。  
+   - **工具**：每日质量评分看板、客户满意度实时推送。  
 4. **弹性控制权**：  
-   • **实践**：允许自定工作节奏（如选择任务顺序）、工具创新（如使用Python替代Excel自动化处理）。  
+   - **实践**：允许自定工作节奏（如选择任务顺序）、工具创新（如使用Python替代Excel自动化处理）。  
 
----
+#### 5. 关键结论
 
-### **关键结论**  
 1. **效率与人性非零和博弈**：西南航空证明合规框架内的人性化设计可同时提升合规性（安全须知传达率）与体验（客户忠诚度）。  
 2. **知识经济需打破泰勒范式**：重复性知识工作（如数据分析）需注入意义（连接战略目标）与多样性（任务轮换），否则高薪难留人才。  
-3. **管理者角色重构**：从“流程警察”转向“意义架构师”——工程师提供工具效率，心理学家塑造文化动力。  
+3. **管理者角色重构**：从「流程警察」转向「意义架构师」——工程师提供工具效率，心理学家塑造文化动力。  
 4. **全球化竞争启示**：  
-   • **制造业**：丰田模式（人本+精益）替代泰勒流水线；  
-   • **服务业**：个性化体验（如西南航空）成为差异化的护城河。  
+   - **制造业**：丰田模式（人本+精益）替代泰勒流水线；  
+   - **服务业**：个性化体验（如西南航空）成为差异化的护城河。  
+
+#### 6. 历史镜鉴与未来趋势
+ 
+- **失败教训**：通用汽车Lordstown工厂的崩塌证明，忽视人性需求的效率优化终将反噬质量与稳定。  
+- **成功范式**：  
+  - **制造业**：特斯拉「超级工厂」通过人机协作（机器人处理危险任务+工人专注创新）平衡效率与安全；  
+  - **服务业**：Airbnb房东赋能计划（自主设计房源特色）提升供给端活力。  
+- **技术赋能**：AI接管标准化任务（如报表生成），释放人类聚焦创造性工作（如策略分析），实现「人本主义泰勒主义」。  
 
 ---
 
-### **历史镜鉴与未来趋势**  
-• **失败教训**：通用汽车Lordstown工厂的崩塌证明，忽视人性需求的效率优化终将反噬质量与稳定。  
-• **成功范式**：  
-  • **制造业**：特斯拉“超级工厂”通过人机协作（机器人处理危险任务+工人专注创新）平衡效率与安全；  
-  • **服务业**：Airbnb房东赋能计划（自主设计房源特色）提升供给端活力。  
-• **技术赋能**：AI接管标准化任务（如报表生成），释放人类聚焦创造性工作（如策略分析），实现“人本主义泰勒主义”。  
+#### 总结
+
+工作设计是工程精密性与心理学洞察力的交响曲。**效率的终局不是冰冷的标准化，而是通过意义赋予与自主权释放，将「人」重新置于系统的核心**。未来的竞争力属于那些能融合工程师的严谨与心理学家的共情，在合规框架内播种创新种子的组织。
 
 ---
 
-### **总结**  
-工作设计是工程精密性与心理学洞察力的交响曲。**效率的终局不是冰冷的标准化，而是通过意义赋予与自主权释放，将“人”重新置于系统的核心**。未来的竞争力属于那些能融合工程师的严谨与心理学家的共情，在合规框架内播种创新种子的组织。
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
