--- a/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.6 Systems of Work.md
+++ b/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.6 Systems of Work.md
@@ -1,74 +1,74 @@
-### **Coursera《管理人力与社会资本》Week 2: 任务、工作与工作系统（模块2-工作系统协同篇）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块2 - 任务、工作与工作系统
 
----
+### 课程2.6 工作系统协同
 
-#### **核心主题**  
 通过**系统性整合管理实践**（如利润分享+员工参与、专业能力+客户信任）创造协同效应，揭示人力资本管理如何成为企业战略的核心竞争力。
 
----
+#### 1. 工作系统的协同效应逻辑
 
-### **关键内容提炼**
+- **单一实践的局限性**：  
+  - **利润分享/股权激励**：若无员工参与权，难以激发行动力（如仅有分红但无决策权）。  
+  - **专业培训**：若脱离业务场景（如Holt Chemical销售员未深入工厂），知识无法转化为客户价值。  
+- **协同公式**：  
+  - **动机+自主权**：利润分享提供经济激励，员工参与（如改进提案权）提供行动抓手。  
+  - **知识+信任**：Holt Chemical化学工程师兼具生产经验与客户服务角色，构建「顾问式销售」壁垒。  
 
-#### **1. 工作系统的协同效应逻辑**  
-• **单一实践的局限性**：  
-  • **利润分享/股权激励**：若无员工参与权，难以激发行动力（如仅有分红但无决策权）。  
-  • **专业培训**：若脱离业务场景（如Holt Chemical销售员未深入工厂），知识无法转化为客户价值。  
-• **协同公式**：  
-  • **动机+自主权**：利润分享提供经济激励，员工参与（如改进提案权）提供行动抓手。  
-  • **知识+信任**：Holt Chemical化学工程师兼具生产经验与客户服务角色，构建“顾问式销售”壁垒。  
+#### 2. 正向案例：系统化设计的竞争优势
 
-#### **2. 正向案例：系统化设计的竞争优势**  
-• **Holt Chemical（化工业）**：  
-  • **实践整合**：  
-    1. **跨界培养**：销售员先深入工厂学习生产流程，成为“技术-客户”桥梁；  
+- **Holt Chemical（化工业）**：  
+  - **实践整合**：  
+    1. **跨界培养**：销售员先深入工厂学习生产流程，成为「技术-客户」桥梁；  
     2. **信任机制**：固定薪资替代销售提成，消除短期逐利动机；  
     3. **终身服务**：销售员长期服务固定客户，积累深度行业知识。  
-  • **效果**：客户愿为高溢价买单，抵御大公司低成本竞争。  
-• **Nordstrom（零售业）**：  
-  • **反常规设计**：  
+  - **效果**：客户愿为高溢价买单，抵御大公司低成本竞争。  
+- **Nordstrom（零售业）**：  
+  - **反常规设计**：  
     ◦ **零标准化培训**：鼓励销售员个性化服务（如上门送衣、灵活折扣）；  
     ◦ **高佣金激励**：销售提成占比高，激发自主创新（如建立私域客户群）；  
     ◦ **快速淘汰**：低适配者自然流失，保留高能动性员工。  
-  • **效果**：单位面积利润全美百货第一，验证“灵活信任＞流程管控”。  
+  - **效果**：单位面积利润全美百货第一，验证「灵活信任＞流程管控」。  
 
-#### **3. 系统崩溃的警示：Holt Chemical的失败实验**  
-• **错误干预**：引入咨询公司建议，对销售员实施“高利润产品提成制”。  
-• **连锁反应**：  
+#### 3. 系统崩溃的警示：Holt Chemical的失败实验
+
+- **错误干预**：引入咨询公司建议，对销售员实施「高利润产品提成制」。  
+- **连锁反应**：  
   1. **内部瓦解**：核心销售员因价值观冲突离职；  
   2. **信任崩塌**：客户察觉推销倾向，转向低价竞争对手；  
   3. **战略溃败**：差异化优势丧失，陷入价格战泥潭。  
-• **核心教训**：单一策略调整（如激励设计）可能破坏整体协同，需维持管理实践的**内在一致性**。
+- **核心教训**：单一策略调整（如激励设计）可能破坏整体协同，需维持管理实践的**内在一致性**。
 
-#### **4. 工作系统设计原则**  
-• **战略锚定**：管理实践需直接支撑业务定位（如Holt的“技术顾问”对应差异化战略）。  
-• **互补性**：各实践需相互强化（如Nordstrom高佣金+零培训=激发自主性）。  
-• **动态平衡**：避免局部最优解（如短期提成增加销量）损害长期竞争力（如客户信任）。  
+#### 4. 工作系统设计原则
 
----
+- **战略锚定**：管理实践需直接支撑业务定位（如Holt的「技术顾问」对应差异化战略）。  
+- **互补性**：各实践需相互强化（如Nordstrom高佣金+零培训=激发自主性）。  
+- **动态平衡**：避免局部最优解（如短期提成增加销量）损害长期竞争力（如客户信任）。  
 
-### **关键结论**  
+#### 5. 关键结论
+
 1. **人力资本是战略杠杆**：Holt与Nordstrom证明，员工管理系统的协同设计可成为比技术/资本更持久的竞争壁垒。  
-2. **“反常识”策略的有效性**：  
-   • **零培训≠低效**：Nordstrom通过释放个体创造力超越标准化服务；  
-   • **高成本≠低利润**：Holt化学工程师的高人力投入转化为客户溢价支付意愿。  
+2. **「反常识」策略的有效性**：  
+   - **零培训≠低效**：Nordstrom通过释放个体创造力超越标准化服务；  
+   - **高成本≠低利润**：Holt化学工程师的高人力投入转化为客户溢价支付意愿。  
 3. **系统性风险控制**：管理实践需像生态体系一样设计——局部改动需评估对整体的涟漪效应（如GM机器人投资忽视文化适配性）。  
-4. **从“支持功能”到“战略引擎”**：传统HR管理聚焦成本控制与流程合规，未来需升级为**战略型人力系统架构师**，主导竞争力塑造。  
+4. **从「支持功能」到「战略引擎」**：传统HR管理聚焦成本控制与流程合规，未来需升级为**战略型人力系统架构师**，主导竞争力塑造。  
+
+#### 6. 跨行业启示
+
+- **科技行业**：谷歌「20%自由时间」+内部创新孵化器，整合自主权与战略方向。  
+- **医疗行业**：梅奥诊所「多学科团队」模式，打破专科壁垒实现患者全周期管理。  
+- **制造业**：海尔「小微创业单元」，将员工转化为内部创业者，激活大企业创新力。  
 
 ---
 
-### **跨行业启示**  
-• **科技行业**：谷歌“20%自由时间”+内部创新孵化器，整合自主权与战略方向。  
-• **医疗行业**：梅奥诊所“多学科团队”模式，打破专科壁垒实现患者全周期管理。  
-• **制造业**：海尔“小微创业单元”，将员工转化为内部创业者，激活大企业创新力。  
+#### 总结
+
+工作系统的本质是**管理实践的化学反应**，而非简单叠加。成功的企业深谙「少即是多」——通过少数高度协同的实践（如Nordstrom的「高佣金-零培训-快淘汰」三角），在特定领域建立对手难以复制的「人力护城河」。未来的管理智慧在于：**用系统性思维取代「最佳实践」迷信，让员工能量与商业战略共振**。
 
 ---
 
-### **总结**  
-工作系统的本质是**管理实践的化学反应**，而非简单叠加。成功的企业深谙“少即是多”——通过少数高度协同的实践（如Nordstrom的“高佣金-零培训-快淘汰”三角），在特定领域建立对手难以复制的“人力护城河”。未来的管理智慧在于：**用系统性思维取代“最佳实践”迷信，让员工能量与商业战略共振**。
+### 附录：字幕
 
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 2: Tasks, Jobs, and Systems of Work
@@ -103,3 +103,4 @@ The problem at Holt Chemical is they called in a consulting company that was giv
 The second thing that happened was, the customers started to bolt, because they didn't trust Holt's service so much anymore, and the products of competitors were cheaper. So, Holt's entire competitive strategy begins to unravel, because of a change in management practices. Actually, just one change which then broke up the synergy between their other practices, and made them as a company not so successful anymore. Another quick example, out of the world of retail is, the folks at Nordstrom. Who have for decades now had the most profitable department store. Sales per square foot, how did they do it? The sell more or less the same that stuff everybody else does sells. They sell their own brands, they sell fashion. And the way they do it is their competitive advantage, and that is, sales people who tailor the experience to individual customers, give them whatever they need. How do they do that? Partly hiring, they try to hire people who are enthusiastic. They don't bother training people because theres not much training you need. You don't need to know the polymer account in sweaters you just need to be able to tell people, that looks great on you and let me let you know when somethings on sale and I'll bring this to your house. The other reason they don't train them is they don't want you to have a standard way to deal with costumers. They want you to do whatever It takes to make that customer happy. And they have huge commissions in terms of a percentage of their pay. They watch through a lot of people.
 
 People who don't fit get pushed out pretty soon. But because they're not spending a lot of money hiring, or training people, when they lose them, it's not that big of a deal. But the ones they keep figure out how to please Nordstrom customers. They maintain their own customer base and they got a big financial incentive back to motivation to sell well. So in that case, it's not a series of complicated practices, and it's not often things that you might call best practice. No training, no careful selection. But it fits together in ways that work for that company given where their business is. And I think that leads us to a conclusion here from this part of the course. And the conclusion is if you do the management of people correctly, it's not just about being able to keep your costs down or able to implement and execute strategy or whatever the processes are the company wants. It is possible that you can actually create the competencies that drive the strategy of the business. And this is going to tie our section of the course into other sections on strategy you're going to hear about in a little bit.
+```
