--- a/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.1 Good and Timely Decisions.md
+++ b/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.1 Good and Timely Decisions.md
@@ -1,64 +1,65 @@
-### **模块总结：做出良好且及时的管理决策**  
-本模块通过企业案例与军事管理经验，揭示了在复杂快速变化的商业环境中高效决策的核心原则。以下是关键结论提炼：
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块3 - 做出良好且及时的管理决策
 
----
+### 课程3.1 良好且及时的决策
 
-#### **一、决策的紧迫性与挑战**
+通过企业案例与军事管理经验，揭示了在复杂快速变化的商业环境中高效决策的核心原则
+
+#### 1. 决策的紧迫性与挑战
+
 1. **市场环境驱动决策速度**  
-   - **竞争加速**：竞争对手的快速产品迭代与服务创新倒逼企业缩短决策周期。  
-   - **复杂性增加**：市场不确定性（如法规变化、客户需求多变）要求管理者在信息不全时仍能果断行动。  
-   - **延迟成本高**：决策拖延可能导致错失市场机会或资源浪费（例如内部流程冗长、过度审批）。
+   1. **竞争加速**：竞争对手的快速产品迭代与服务创新倒逼企业缩短决策周期。  
+   2.  **复杂性增加**：市场不确定性（如法规变化、客户需求多变）要求管理者在信息不全时仍能果断行动。  
+   3.  **延迟成本高**：决策拖延可能导致错失市场机会或资源浪费（例如内部流程冗长、过度审批）。
 
----
+#### 2. 高效决策的核心策略
 
-#### **二、高效决策的核心策略**
-1. **建立“70%信息决策”原则**  
-   - **借鉴海军陆战队经验**：在掌握70%必要信息时即可行动，避免过度追求完美数据（“等待99%信息将失去先机”）。  
-   - **平衡速度与质量**：避免“盲目决策”与“分析瘫痪”两个极端。
+1. **建立「70%信息决策」原则**  
+   1. **借鉴海军陆战队经验**：在掌握70%必要信息时即可行动，避免过度追求完美数据（「等待99%信息将失去先机」）。  
+   2. **平衡速度与质量**：避免「盲目决策」与「分析瘫痪」两个极端。
 
-2. **依赖可信的内部顾问**  
-   - **案例：思科CEO John Chambers与CFO的合作**  
-     - 寻找“无偏见”的顾问（如不觊觎职位的资深同事），确保建议的客观性。  
-     - 通过非正式沟通快速验证关键决策风险。
+2. **依赖可信的内部顾问**
+   1. **案例：思科CEO John Chambers与CFO的合作** 
+      1. 寻找「无偏见」的顾问（如不觊觎职位的资深同事），确保建议的客观性。 
+      2. 通过非正式沟通快速验证关键决策风险。
 
 3. **实时数据与敏捷流程**  
-   - **硅谷企业研究启示**：  
-     - 快速决策公司倾向于**主动收集实时数据**（而非等待滞后报告）。  
-     - 简化流程，减少冗余审批层级，授权一线团队灵活应对。
+   1. **硅谷企业研究启示**： 
+      1. 快速决策公司倾向于**主动收集实时数据**（而非等待滞后报告）。 
+      2. 简化流程，减少冗余审批层级，授权一线团队灵活应对。
 
-4. **明确战略意图，避免微观管理**  
-   - **“指挥官意图”原则**：清晰传达目标（如“提升客户留存率”），而非具体执行步骤。  
-   - **“关注但不干预”（Eyes on, Hands off）**：赋予团队自主权，鼓励试错学习。
+4. **明确战略意图，避免微观管理**
+   1. **「指挥官意图」原则**：清晰传达目标（如「提升客户留存率」），而非具体执行步骤。 
+   2. **「关注但不干预」（Eyes on, Hands off）**：赋予团队自主权，鼓励试错学习。
 
 5. **容忍首次错误，杜绝重复失误**  
-   - **创新文化**：允许首次决策失误，但需事后复盘优化（如海军陆战队的“首次宽容”原则）。  
-   - **系统性改进**：建立反馈机制，避免同类错误再次发生。
+   1. **创新文化**：允许首次决策失误，但需事后复盘优化（如海军陆战队的「首次宽容」原则）。 
+   2. **系统性改进**：建立反馈机制，避免同类错误再次发生。
 
----
+#### 3. 避免决策陷阱
 
-#### **三、避免决策陷阱**
-1. **优柔寡断的代价**  
-   - 长期拖延决策会损害团队信任、降低组织敏捷性，甚至导致管理者职业发展受阻。
+- **优柔寡断的代价** 
+  - 长期拖延决策会损害团队信任、降低组织敏捷性，甚至导致管理者职业发展受阻。
+- **警惕隐性偏见**
+  - 决策者需识别个人或团队中的隐藏议程（如权力斗争、风险规避心理），通过透明沟通减少干扰。
 
-2. **警惕隐性偏见**  
-   - 决策者需识别个人或团队中的隐藏议程（如权力斗争、风险规避心理），通过透明沟通减少干扰。
+#### 4. 行动建议
 
----
-
-#### **四、行动建议**
-1. **建立决策框架**：结合“70%信息原则”与实时数据，设定清晰决策阈值。  
+1. **建立决策框架**：结合「70%信息原则」与实时数据，设定清晰决策阈值。  
 2. **培养顾问关系**：寻找1-2位可信的内部或外部顾问，定期进行非正式决策推演。  
 3. **授权与复盘**：向团队明确战略目标，定期复盘决策案例以优化流程。  
 4. **文化塑造**：通过容忍首次错误、奖励快速行动，推动组织向敏捷决策转型。
 
 ---
 
-**总结**：在复杂商业环境中，管理者需平衡速度与质量，通过可信顾问、实时数据、明确授权和容错文化构建高效决策体系，避免因拖延或偏见导致的战略失误。
+#### 总结
 
+在复杂商业环境中，管理者需平衡速度与质量，通过可信顾问、实时数据、明确授权和容错文化构建高效决策体系，避免因拖延或偏见导致的战略失误。
 
+---
 
-## Prompt
+### 附录：字幕
 
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 3: Making Good and Timely Management Decisions
@@ -97,3 +98,4 @@ The topic we're focusing on right now four answers emerged.
 As are conveyed to our students, you can see the photographs here that have our MBA students looking at, in the center photograph, for example, at a Marine instructor. And the Marine instructors are saying the following, four key points, add these to what we had on that prior slide with five key points. Number one, Marine officers are instructed to know to make a decision in the field with 70% of the information you need, 70% confidence, 70% consensus. Now, it's a metaphor, keep that in mind. But the key point is, it's more than 50%. Ideas don't shoot from the hip. That's timely, but not good. Conversely, don't wait for 99% certainty that you have all the data, because somebody else is going to be on the high ground before you get there, physically, literally. But in taking this now as a metaphor 70% get analysis done, gather data, build agreement, but don't wait for perfect agreement or perfect data. Number two, a separate but really important point,
 
 a manager needs to learn, or a marine officer needs to learn, To convey what a Marine would call commander's intent. What in business or other organizations we tend to call strategic intent. Here's what I want, says you the manager to people around you. And then don't try to micromanage what they do. Leave your subordinates to work out the details. There's a phrase that captures that point I think it's a great phrase, eyes on, hands off. That leads to the third point. Again a kind of formulation for making good in timely which is to develop a tolerance even a Around of applause for the people that work for you when they make a mistake the first time. They're going to make mistakes because 70% means they don't have perfect understanding of the situation, and you've told them what your intent is, and then you've not told them how to do it, you're better than they are by definition as their manager So, they're going to have to learn by making mistakes, by learning, by doing. And the statement is, it's a great statement from Marine Corps and many organizations that Peter Capella and I worked with is that you have to develop a tolerance for first time mistakes and after x review to come back on what happened. How can we make certain it does not happen again And of course no tolerance for the same kind of mistake made a second time. Finally I love the phrase indecisiveness is a fatal flaw. For the U.S. Marine Corp that has a certain meaning in combat areas in organizations that we're talking about today. That has a certain metaphor. And maybe just to sum that up I'm going to offer up a statement that probably describes a certain number of you listening. And that is if you work for a boss who just couldn't get a decision made. Couldn't get paper off her or his desk. You started going nuts. You knew decisions had to get made And an indecisive manager can be fatal for their career. It can be very detrimental for the organization. Keep those four points from the US Marine Corps in mind. Keep the five points on the left hand side. Of the information from Silicon Valley in mind. Keep in mind what John Chambers said about having somebody close to you to whom you can turn for guidance. I'm going to ask you to calculate the cost, the jeweler's total loss. With the information in front of you. Take 60 seconds, be mindful of those factors. The whole point of this course is to put some factors in the back of our head we can apply. Take 60 seconds. I'm going to ask you what your answer is, write it down on a piece of paper in front of you.
+```
