--- a/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.3 US Examples.md
+++ b/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.3 US Examples.md
@@ -1,67 +1,72 @@
-### **模块总结：应对决策风险与行为偏见的实战策略**  
-本模块通过中美贸易谈判、航天任务失败案例及行为心理学研究，揭示了在高压环境下管理决策的复杂性及应对策略。以下是关键结论提炼：
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块3 - 做出良好且及时的管理决策
 
----
+### 课程3.3 应对决策风险与行为偏见：美国案例
 
-#### **一、高风险决策的韧性构建**
-1. **案例：中美WTO谈判的危机处理**  
-   - **危机应对**：美国贸易代表Charlene Barshefsky在总统拒签协议后，**6小时内重启多方协商**（联系中国总理、国会、工会、企业），展现“快速重启”能力。  
-   - **战略定力**：坚持核心目标（推动中美贸易自由化），灵活调整战术（从华盛顿签约转为北京签约）。  
-   - **长期收益思维**：容忍短期政治争议（如劳工组织反对），聚焦长期贸易增量（中美贸易额从涓流到洪流）。
+通过中美贸易谈判、航天任务失败案例及行为心理学研究，揭示了在高压环境下管理决策的复杂性及应对策略。
 
-2. **NASA喷气推进实验室（JPL）的失败管理**  
-   - **容错文化实践**：  
-     - **400万美元学费原则**：主管Charles Elachi拒绝工程师辞职请求，将两次火星任务失败视为“付费学习”（Tolerated First-Time Failure）。  
-     - **失败转化机制**：同一团队后续成功执行“勇气号”与“机遇号”火星探测任务，验证“快速迭代”价值。  
-   - **决策心智模型**：  
-     - **精确而非完美**：要求“严谨决策”（Exacting Decisions）但拒绝过度拖延（案例中从失败到成功仅间隔1个任务周期）。  
-     - **压力测试文化**：通过极端任务（如深空探测）倒逼团队在70%信息下决策的能力。
+#### 1. 高风险决策的韧性构建
 
----
+1. **中美WTO谈判的危机处理**
+   1. **危机应对**：美国贸易代表Charlene Barshefsky在总统拒签协议后，**6小时内重启多方协商**（联系中国总理、国会、工会、企业），展现「快速重启」能力。
+   2. **战略定力**：坚持核心目标（推动中美贸易自由化），灵活调整战术（从华盛顿签约转为北京签约）。 
+   3.  **长期收益思维**：容忍短期政治争议（如劳工组织反对），聚焦长期贸易增量（中美贸易额从涓流到洪流）。
 
-#### **二、行为陷阱识别与干预**
-1. **《思考，快与慢》的决策启示**  
-   - **过度自信周期律**：  
-     - **新人陷阱**：入职6个月员工易因初步成功产生认知膨胀（案例：惠普高管Ann Livermore警惕“过早自信”）。  
-     - **成功悖论**：辉煌业绩后更易陷入群体傲慢（如“我们无需改变”心态）。  
-   - **双峰偏差管理**：  
-     - **过度乐观**：用“外科医生式警告”机制（如丰田年报强制披露前4大潜在风险）。  
-     - **过度悲观**：设立“最低可行信心阈值”（如JPL的70%可行即行动原则）。
+2. **NASA喷气推进实验室（JPL）的失败管理** 
+   1. **容错文化实践**：  
+      1. **400万美元学费原则**：主管Charles Elachi拒绝工程师辞职请求，将两次火星任务失败视为「付费学习」（Tolerated First-Time Failure）。
+      2.  **失败转化机制**：同一团队后续成功执行「勇气号」与「机遇号」火星探测任务，验证「快速迭代」价值。  
+   2. **决策心智模型**：
+      1. **精确而非完美**：要求「严谨决策」（Exacting Decisions）但拒绝过度拖延（案例中从失败到成功仅间隔1个任务周期）。  
+      2. **压力测试文化**：通过极端任务（如深空探测）倒逼团队在70%信息下决策的能力。
+
+#### 2. 行为陷阱识别与干预
+
+1. **《思考，快与慢》的决策启示**
+   1. **过度自信周期律**：  
+      1. **新人陷阱**：入职6个月员工易因初步成功产生认知膨胀（案例：惠普高管Ann Livermore警惕「过早自信」）。
+      2. **成功悖论**：辉煌业绩后更易陷入群体傲慢（如「我们无需改变」心态）。  
+   2. **双峰偏差管理**：  
+      1. **过度乐观**：用「外科医生式警告」机制（如丰田年报强制披露前4大潜在风险）。 
+      2. **过度悲观**：设立「最低可行信心阈值」（如JPL的70%可行即行动原则）。
 
 2. **丰田持续改进文化的借鉴**  
-   - **反自满机制**：  
-     - **永远的问题清单**：即使称霸行业仍强制寻找4个待改进领域（如混合动力技术迭代时的电池效率焦虑）。  
-     - **危机模拟训练**：定期开展“假设业绩下滑50%”的压力测试决策演练。  
-   - **文化具象化工具**：  
-     - **改善看板**：可视化每个决策的后续优化路径（如火星任务失败后的23项技术修正清单）。  
-     - **反向OKR**：设定“避免重复错误”的目标（如“本季度同类决策失误归零”）。
+   1. **反自满机制**： 
+      1. **永远的问题清单**：即使称霸行业仍强制寻找4个待改进领域（如混合动力技术迭代时的电池效率焦虑）。
+      2. **危机模拟训练**：定期开展「假设业绩下滑50%」的压力测试决策演练。  
+   2. **文化具象化工具**：  
+      1. **改善看板**：可视化每个决策的后续优化路径（如火星任务失败后的23项技术修正清单）。  
+      2. **反向OKR**：设定「避免重复错误」的目标（如「本季度同类决策失误归零」）。
 
----
+#### 3. 管理者实战工具箱
 
-#### **三、管理者实战工具箱**
-1. **决策重启协议**  
-   - **5小时危机响应窗**：重大挫折后强制在5小时内启动“三步走”程序：  
-     - ① 核心团队紧急会议（限30分钟）  
-     - ② 向3个外部顾问咨询（限2小时）  
-     - ③ 发布修订版行动计划（限2.5小时）  
-   - **战略意图重申机制**：每次危机沟通必以重复组织使命开场（如JPL团队会议首屏永远显示“探索太阳系”）。
+1. **决策重启协议**
+   1. **5小时危机响应窗**：重大挫折后强制在5小时内启动「三步走」程序： 
+      1. 核心团队紧急会议（限30分钟）
+      2. 向3个外部顾问咨询（限2小时）
+      3. 发布修订版行动计划（限2.5小时）  
+   2. **战略意图重申机制**：每次危机沟通必以重复组织使命开场（如JPL团队会议首屏永远显示「探索太阳系」）。
 
 2. **行为偏差矫正器**  
-   - **自信度标尺**：关键决策时要求团队匿名提交“信心指数”（1-10分），若平均分＞8分则强制开展魔鬼辩护（Devil’s Advocacy）。  
-   - **历史镜子会议**：季度复盘会播放过往同类决策录音，揭露“这次不同”式自我欺骗。
+   1. **自信度标尺**：关键决策时要求团队匿名提交「信心指数」（1-10分），若平均分＞8分则强制开展魔鬼辩护（Devil’s Advocacy）。
+   2. **历史镜子会议**：季度复盘会播放过往同类决策录音，揭露「这次不同」式自我欺骗。
 
 3. **韧性决策指标**  
-   - **70/30法则**：  
-     - 70%决策在48小时内完成（从立项到执行）  
-     - 30%资源预留用于决策后3个月的动态修正  
-   - **失败学分制**：允许年度“付费学习”预算（如团队可自主支配占预算5%的试错资金）。
+   1. **70/30法则**： 
+      1. 70%决策在48小时内完成（从立项到执行）
+      2. 30%资源预留用于决策后3个月的动态修正  
+   2. **失败学分制**：允许年度「付费学习」预算（如团队可自主支配占预算5%的试错资金）。
 
 ---
 
-**总结**：卓越决策者需兼具**危机重启力**、**行为洞察力**与**系统反脆弱力**。通过制度化容错、动态化纠偏及文化化谦逊，将决策风险转化为组织进化动能。管理者应像NASA操控火星探测器般——在未知中保持精准，在失败中校准航向。
+#### 总结
 
-## Prompt
+卓越决策者需兼具**危机重启力**、**行为洞察力**与**系统反脆弱力**。通过制度化容错、动态化纠偏及文化化谦逊，将决策风险转化为组织进化动能。管理者应像NASA操控火星探测器般——在未知中保持精准，在失败中校准航向。
 
+---
+
+### 附录：字幕
+
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 3: Making Good and Timely Management Decisions
@@ -106,3 +111,4 @@ It's a book that pulls together a lot of research, it's great, on the factors th
 Almost like a surgeon general's warning, it's a little bit ironic, because it says this. If you've had a great quarter, a terrific year, watch out because some of these behavioral shortcomings so well summed up in this book that I've already referenced, Thinking Fast and Slow, Daniel Kahneman the author of that book. When things are going swimmingly well, there is a tendency for all these sub-optimal problems to become more acute. People become, if it's been a good year, a great quarter, over-confident. Hubris sets in, we're doing great. We don't have to make any changes, when maybe some of that greatness is, literally, the luck of the draw.
 
 And the last bottom paragraph there in that box for me is one of the most profound statements about what we have to do as a manager of people in an organization with a good strategy. And that is guard against over optimism. And by the way over pessimism, we have to manage that. Over optimism, hubris set in. Over optimism we don't do anything. There's a middle ground. And just to maybe make that tangible by way of illustration, the great Japanese automaker Toyota for years has adopted the mantra, I think we all know it, of continuous improvement. We've got a great auto. They've often dominated the world industry in terms of price and quality. But don't rest on your laurels. We've got to think about what are the four improvements that still need to be made, continuous improvement. And that's a managed culture. I've gone into Toyota, talked with people who, I challenged them on that. And they said of course we had a great year, Mike. But in fact we're really worried about four new problems, and that's where we're focused.
+```
