--- a/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.4 Fighting a Fire.md
+++ b/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.4 Fighting a Fire.md
@@ -1,61 +1,65 @@
-### **模块总结：危机决策中的沟通失效与领导力重构**  
-本模块通过1949年美国曼恩峡谷山火悲剧案例，揭示了极端环境下管理决策的核心挑战与致命盲点。以下是关键结论提炼：
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块3 - 做出良好且及时的管理决策
 
----
+### 课程3.4 危机决策中的沟通失效与领导力重构：灭火案例
 
-#### **一、危机决策的典型困境**
+通过1949年美国曼恩峡谷山火悲剧案例，揭示了极端环境下管理决策的核心挑战与致命盲点。
+
+#### 1. 危机决策的典型困境
+
 1. **信息孤岛效应**  
-   - **单点尽职调查风险**：队长Wagner Dodge独自勘察火情（5:20-5:40），导致团队**实时信息脱节**（如未同步草原火蔓延速度可达20英里/小时的关键数据）。  
-   - **战略意图模糊化**：指令“前往峡谷口”未解释安全逻辑（利用河流避险），引发基层误解（13人未意识到逃生路线已被切断）。
+   1. **单点尽职调查风险**：队长Wagner Dodge独自勘察火情（5:20-5:40），导致团队**实时信息脱节**（如未同步草原火蔓延速度可达20英里/小时的关键数据）。  
+   2. **战略意图模糊化**：指令「前往峡谷口」未解释安全逻辑（利用河流避险），引发基层误解（13人未意识到逃生路线已被切断）。
 
 2. **权威-信任断裂**  
-   - **沉默型领导陷阱**：技术专家型管理者（9年经验）过度依赖专业权威，忽视**情感共鸣建设**（队员评价“惜字如金”）。  
-   - **临时授权混乱**：副手Bob Salee（17岁）暂代指挥时缺乏应急培训，暴露**梯队培养缺失**。
+   1. **沉默型领导陷阱**：技术专家型管理者（9年经验）过度依赖专业权威，忽视**情感共鸣建设**（队员评价「惜字如金」）。  
+   2。 **临时授权混乱**：副手Bob Salee（17岁）暂代指挥时缺乏应急培训，暴露**梯队培养缺失**。
 
----
+#### 2. 决策链崩坏的关键节点
 
-#### **二、决策链崩坏的关键节点**
 | 时间线 | 决策行动 | 管理原则违背点 | 后果级联 |
 |--------|----------|----------------|----------|
-| **17:00** | 队长下达“出发”指令 | 未明确战略意图（安全优先原则） | 团队盲目执行基础任务 |
-| **17:20** | 队长独自折返勘察 | 违反“实时数据共享”（硅谷原则） | 副手接替时无关键风险认知 |
-| **17:40** | 发现火势突变后紧急撤离 | 未启动“70%共识”沟通（海军陆战队原则） | 13人未理解逃生路线变更逻辑 |
-| **17:49** | 队长点火制造安全区 | **零解释式行动**（“信任赤字”爆发） | 仅2人跟随，13人葬身火海 |
+| **17:00** | 队长下达「出发」指令 | 未明确战略意图（安全优先原则） | 团队盲目执行基础任务 |
+| **17:20** | 队长独自折返勘察 | 违反「实时数据共享」（硅谷原则） | 副手接替时无关键风险认知 |
+| **17:40** | 发现火势突变后紧急撤离 | 未启动「70%共识」沟通（海军陆战队原则） | 13人未理解逃生路线变更逻辑 |
+| **17:49** | 队长点火制造安全区 | **零解释式行动**（「信任赤字」爆发） | 仅2人跟随，13人葬身火海 |
 
----
+#### 3. 灾难决策的逆向验证
 
-#### **三、灾难决策的逆向验证**
 1. **若应用海军陆战队原则**  
-   - **70%信息同步**：队长勘察时实时传回火势数据（如对讲机通报草原火特性）。  
-   - **指挥官意图可视化**：出发前绘制“火行为预测图”并全员演练应急预案。  
-   - **容错机制激活**：定期开展“火场突变”沙盘推演（如每月1次30分钟敏捷决策训练）。
+   1. **70%信息同步**：队长勘察时实时传回火势数据（如对讲机通报草原火特性）。  
+   2. **指挥官意图可视化**：出发前绘制「火行为预测图」并全员演练应急预案。  
+   3. **容错机制激活**：定期开展「火场突变」沙盘推演（如每月1次30分钟敏捷决策训练）。
 
 2. **若植入硅谷敏捷文化**  
-   - **微决策单元**：将16人分队拆为4组，各设信息联络员（每15分钟交叉同步情报）。  
-   - **实时数据看板**：通过手持设备共享火势热力图、风速变化等关键指标。  
-   - **心理安全阀**：建立“红色指令质疑权”（任何成员可要求30秒紧急澄清）。
+   1. **微决策单元**：将16人分队拆为4组，各设信息联络员（每15分钟交叉同步情报）。  
+   2. **实时数据看板**：通过手持设备共享火势热力图、风速变化等关键指标。  
+   3. **心理安全阀**：建立「红色指令质疑权」（任何成员可要求30秒紧急澄清）。
 
----
+#### 4. 管理启示：构建抗崩溃决策体系
 
-#### **四、管理启示：构建抗崩溃决策体系**
 1. **危机沟通协议**  
-   - **3×3汇报法则**：所有指令需包含3个要素（目标/风险/替代方案），接收者3分钟内复述确认。  
-   - **影子顾问制**：高风险任务配备独立观察员（非团队成员），每20分钟发起“盲点质询”。
+   1. **3×3汇报法则**：所有指令需包含3个要素（目标/风险/替代方案），接收者3分钟内复述确认。  
+   2. **影子顾问制**：高风险任务配备独立观察员（非团队成员），每20分钟发起「盲点质询」。
 
 2. **决策韧性训练**  
-   - **压力浸入模拟**：季度性开展“信息截断演练”（如强制断网下完成危机决策）。  
-   - **反向场景构建**：要求管理者定期撰写“失败日记”（详细描述3种最可能的决策崩溃路径）。
+   1. **压力浸入模拟**：季度性开展「信息截断演练」（如强制断网下完成危机决策）。  
+   2. **反向场景构建**：要求管理者定期撰写「失败日记」（详细描述3种最可能的决策崩溃路径）。
 
 3. **领导力透明度指标**  
-   - **沉默成本计量**：计算管理者未解释决策所消耗的团队响应时间（案例中5分钟沟通缺失导致13人死亡）。  
-   - **信任加速度公式**：信任值=（透明决策次数×危机存活率）/（独断指令数×解释延迟时长）。
+   1. **沉默成本计量**：计算管理者未解释决策所消耗的团队响应时间（案例中5分钟沟通缺失导致13人死亡）。  
+   2. **信任加速度公式**：信任值=（透明决策次数×危机存活率）/（独断指令数×解释延迟时长）。
 
 ---
 
-**总结**：曼恩峡谷悲剧的本质是**系统化决策失灵**。卓越危机管理者需在专业权威与集体智慧间建立“决策张力”，通过实时透明、敏捷共识与预设容错，将极端风险转化为组织韧性。如同控制草原火势——真正的安全区不是燃烧后的灰烬，而是持续燃烧的沟通之火。
+#### 总结
 
-## Prompt
+曼恩峡谷悲剧的本质是**系统化决策失灵**。卓越危机管理者需在专业权威与集体智慧间建立「决策张力」，通过实时透明、敏捷共识与预设容错，将极端风险转化为组织韧性。如同控制草原火势——真正的安全区不是燃烧后的灰烬，而是持续燃烧的沟通之火。
 
+---
+
+### 附录：字幕
+
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 3: Making Good and Timely Management Decisions
@@ -120,3 +124,4 @@ He's a man of few words, so he's not gonna explain his actions. But Bob, the num
 Couple seconds pass, Wagner Dodge signals to Bob, Bob, get in here now! And, Bob, for reasons I'm gonna have you think about, start thinking right now about this decision, decides to go left and he goes up over a cliff side or kind of a cliff crest and plunges into the next valley over to the left of the screen there. The third firefighter today in this line, sort of like circus elephants almost. Is named Walter Rumsey. And Walter takes a look, does he follow the guy he's been following, does he follow the team manager, you? He doesn't understand necessarily what that fire is all about. And whatever the thinking is, Walter decides to go with Bob. So, very physically, the red dot now has one person, the team manager. Two people have broken away from the team manager. And they're now down on the other side of a crest.
 
 The other 13, with fire increasingly coming up their backside, their shirts are beginning to smoulder from the radiant heat. And I'm gonna sum it up with three final arrows right here. The final 13 represented by 3 arrows only, take a look at Wagner Dodge and his small burned out area. They kind of appreciate we think that two ahead of them had gone over to the left. But they're in the thick prairie grass when the fire does overtake them. And thus the summary terrible tragedy. I'm gonna ask you now to interpret what happened, the after actual review looking back on decisions, so we can make it better next time.
+```
