--- a/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.5 After Action Review and Summary.md
+++ b/03. Managing Social and Human Capital/Module 3 Making Good and Timely Management Decisions/3.5 After Action Review and Summary.md
@@ -1,51 +1,50 @@
-### **模块总结：决策失败的事后复盘与组织韧性构建**  
-本模块通过曼恩峡谷山火悲剧的深度复盘，揭示了危机决策中人性要素的核心地位及系统性改进路径。以下是关键结论提炼：
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块3 - 做出良好且及时的管理决策
 
----
+### 课程3.5 决策失败的事后复盘与组织韧性构建
 
-#### **一、悲剧决策链的致命断裂点**
+通过曼恩峡谷山火悲剧的深度复盘，揭示了危机决策中人性要素的核心地位及系统性改进路径。
+
+#### 1. 悲剧决策链的致命断裂点
+
 1. **技术天才的沟通盲区**  
-   - **沉默型专家陷阱**：队长Wagner Dodge虽发明“逃生火”技术（现全球消防标配），但**9年未培养解释能力**，关键时刻仅3人理解其意图。  
-   - **信任崩塌临界点**：副手Bob Salee的幸存证词显示，**3次未解释决策**即触发信任瓦解（“他不再值得跟随”）。
+   1. **沉默型专家陷阱**：队长Wagner Dodge虽发明「逃生火」技术（现全球消防标配），但**9年未培养解释能力**，关键时刻仅3人理解其意图。  
+   2. **信任崩塌临界点**：副手Bob Salee的幸存证词显示，**3次未解释决策**即触发信任瓦解（「他不再值得跟随」）。
 
 2. **单维度能力评估体系**  
-   - **纯技术培训缺陷**：1949年美国林务局仅考核火行为知识，**零人际沟通训练**（现代消防指挥官需通过“危机说服力模拟测试”）。  
-   - **梯队建设失效**：17岁副手无应急指挥培训，暴露**领导力传承断层**。
+   1. **纯技术培训缺陷**：1949年美国林务局仅考核火行为知识，**零人际沟通训练**（现代消防指挥官需通过「危机说服力模拟测试」）。  
+   2. **梯队建设失效**：17岁副手无应急指挥培训，暴露**领导力传承断层**。
 
----
+#### 2. 现代管理的事后复盘机制（After Action Review, AAR）
 
-#### **二、现代管理的事后复盘机制（After Action Review, AAR）**
 | 传统复盘缺陷 | 现代AAR升级方案 | 应用案例 |  
 |--------------|------------------|----------|  
 | 归咎个人责任 | **5Why系统追问**（聚焦流程漏洞） | NASA挑战者号事故后建立决策树分析模型 |  
 | 静态报告存档 | **3D情境重建**（VR模拟决策瞬间） | 美军采用虚拟现实复盘伊拉克战场决策 |  
 | 高层闭门讨论 | **跨层级透明听证**（含一线员工证词） | 丰田刹车门事件邀请产线工人参与整改 |  
 
----
+#### 3. 抗崩溃团队的四大韧性基因
 
-#### **三、抗崩溃团队的四大韧性基因**
 1. **战略意图肌肉记忆**  
-   - **每日微演练**：晨会随机抽取成员用1句话复述当前核心目标（如“今日优先：客户留存＞新客增长”）。  
-   - **意图可视化工具**：作战室悬挂“指挥官意图三问”（Why此战？Win模样？Red Line在哪？）。
+   1. **每日微演练**：晨会随机抽取成员用1句话复述当前核心目标（如「今日优先：客户留存＞新客增长」）。  
+   2. **意图可视化工具**：作战室悬挂「指挥官意图三问」（Why此战？Win模样？Red Line在哪？）。
 
 2. **压力递增式信任训练**  
-   - **黑盒压力测试**：季度性开展“信息剥夺演练”（如强制断网4小时完成危机决策）。  
-   - **反向信任积分**：成员每解释1次决策逻辑+10分，每沉默执行1次-5分（团队积分兑换资源）。
+   1. **黑盒压力测试**：季度性开展「信息剥夺演练」（如强制断网4小时完成危机决策）。  
+   2. **反向信任积分**：成员每解释1次决策逻辑+10分，每沉默执行1次-5分（团队积分兑换资源）。
 
 3. **跨代际认知同步**  
-   - **Z世代沟通协议**：要求50后管理者用短视频解释战略，95后员工用文字简报反馈执行（双向翻译机制）。  
-   - **影子学徒制**：新晋管理者需为资深员工担任1个月“数字技术翻译官”。
+   1. **Z世代沟通协议**：要求50后管理者用短视频解释战略，95后员工用文字简报反馈执行（双向翻译机制）。  
+   2. **影子学徒制**：新晋管理者需为资深员工担任1个月「数字技术翻译官」。
 
 4. **失败解剖学文化**  
-   - **尸检式案例库**：将重大失败分解为“决策切片”（每30分钟为1切片），标注200+潜在改进点。  
-   - **耻辱勋章体系**：公开表彰“最富教益失败”团队，颁发实体勋章（需佩戴至下次授勋）。
+   1. **尸检式案例库**：将重大失败分解为「决策切片」（每30分钟为1切片），标注200+潜在改进点。  
+   2. **耻辱勋章体系**：公开表彰「最富教益失败」团队，颁发实体勋章（需佩戴至下次授勋）。
 
----
+#### 4. 管理者的二元能力矩阵
 
-#### **四、管理者的二元能力矩阵**  
 构建**技术理性×人性感知**四象限模型：  
 1. **危机先知型**（高技高感）：实时同步数据+情感共鸣（如NASA任务指挥中心）  
-2. **沉默专家型**（高技低感）：需配备“人性翻译官”角色（如CTO+CPO双轨制）  
+2. **沉默专家型**（高技低感）：需配备「人性翻译官」角色（如CTO+CPO双轨制）  
 3. **热情误判型**（低技高感）：限制决策半径，专注文化塑造  
 4. **双盲危险型**（低技低感）：组织冗余机制强制干预  
 
@@ -53,10 +52,15 @@
 
 ---
 
-**总结**：真正的决策韧性不在于避免失败，而在于将每次崩溃转化为组织DNA的强化节点。如同山火后的生态——最肥沃的土壤诞生于灰烬之中，最强大的团队脱胎于坦诚的事后剖析。管理者当以“失败为薪柴”，点燃持续进化的决策引擎。
+#### 总结
 
-## Prompt
+真正的决策韧性不在于避免失败，而在于将每次崩溃转化为组织DNA的强化节点。如同山火后的生态——最肥沃的土壤诞生于灰烬之中，最强大的团队脱胎于坦诚的事后剖析。管理者当以「失败为薪柴」，点燃持续进化的决策引擎。
 
+---
+
+### 附录：字幕
+
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 3: Making Good and Timely Management Decisions
@@ -99,3 +103,4 @@ What might he have done or what might others have done to help him also apprecia
 Keep those in mind, maybe a dozen items for your own template, back your thinking. The graph here, lower right-hand corner, also adds this point. If we can pull people into a pretty good team, a cohesive team is the phrase I use. They know each other, they worked together before. They appreciate your strengths and your shortcomings. We know from ample reasearch evidence that cohesive teams under the most trying of circumstances, the pressure is on, time is short. When the pressure goes up, that's the lower horizontal axis at the bottom. When stress goes up, cohesive teams actually get better and not worse. There is no panic point. They stay focused, they get the job done.
 
 Good and timely decisions critical to make it happen on your own part. And we've identified probably close now to at least 10 maybe 12 items for your own personal management template for good and timely decision making.
+```
