--- a/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.2 Performance: Pay and Promotion.md
+++ b/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.2 Performance: Pay and Promotion.md
@@ -1,74 +1,71 @@
----
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块4 - 组织架构设计与变革
 
-### **模块总结：绩效、薪酬与晋升对组织行为的影响**
+### 课程4.2 绩效、薪酬与晋升对组织行为的影响
 
-#### **核心主题**  
-本模块聚焦薪酬与晋升机制如何塑造员工行为及组织绩效，强调公平感知在激励体系中的核心作用。通过NBA球员薪酬案例和保险公司办公室分配实验，揭示了不合理的激励机制如何引发负面行为，并提出了优化组织架构的关键原则。
+聚焦薪酬与晋升机制如何塑造员工行为及组织绩效，强调公平感知在激励体系中的核心作用。通过NBA球员薪酬案例和保险公司办公室分配实验，揭示了不合理的激励机制如何引发负面行为，并提出了优化组织架构的关键原则。
 
----
-
-### **关键结论与案例分析**
-
-#### **一、薪酬公平与员工行为**  
+#### 1. 薪酬公平与员工行为
+  
 1. **公平理论的应用**  
-   - **案例：NBA球员的薪酬差异**  
-     - 当球员感知薪酬不公（如自身表现优于薪资水平），可能采取两种行为：  
-       - **积极证明**：增加投篮次数以展示能力，但因过度个人主义导致团队得分下降（平均每场损失1分）。  
-       - **消极怠工**：因不满薪酬而降低努力，损害团队整体表现。  
-     - **关键启示**：薪酬与绩效脱钩会扭曲行为，需确保薪资与贡献直接挂钩，避免“相对剥夺感”。
+   1. **案例：NBA球员的薪酬差异**  
+      1. 当球员感知薪酬不公（如自身表现优于薪资水平），可能采取两种行为：
+         1. **积极证明**：增加投篮次数以展示能力，但因过度个人主义导致团队得分下降（平均每场损失1分）。  
+         2. **消极怠工**：因不满薪酬而降低努力，损害团队整体表现。  
+      2. **关键启示**：薪酬与绩效脱钩会扭曲行为，需确保薪资与贡献直接挂钩，避免「相对剥夺感」。
 
 2. **隐性激励的威力**  
-   - **案例：保险公司办公室分配实验**  
-     - 员工被随机分配至大小不同的办公室后：  
-       - **“超额奖励”效应**：获得大办公室的员工因感知被重视，绩效显著提升。  
-       - **“不足奖励”效应**：小办公室的员工因心理失衡，绩效下滑。  
-     - **关键启示**：非货币激励（如办公环境、晋升机会）同样影响公平感知，需系统化设计。
+   1. **案例：保险公司办公室分配实验**  
+      1. 员工被随机分配至大小不同的办公室后：  
+         1. **「超额奖励」效应**：获得大办公室的员工因感知被重视，绩效显著提升。  
+         2. **「不足奖励」效应**：小办公室的员工因心理失衡，绩效下滑。  
+     2. **关键启示**：非货币激励（如办公环境、晋升机会）同样影响公平感知，需系统化设计。
 
----
+#### 2. 晋升机制的设计原则
 
-#### **二、晋升机制的设计原则**  
 1. **透明与客观性**  
    - 晋升标准需清晰、可量化（如绩效指标），避免主观偏见（如资历、学历等非相关因素）。  
-   - **案例：Hausser食品公司的“玻璃天花板”**  
+   - **案例：Hausser食品公司的「玻璃天花板」**  
      - 优秀区域经理因学历未被晋升，暴露晋升机制与绩效脱钩，导致人才流失与创新抑制。
 
 2. **动态调整机制**  
-   - **避免僵化目标**：如佛罗里达销售团队因担心未来目标提高而刻意控制增长（仅超额10%）。  
-   - **解决方案**：设计阶梯式奖励（如超额增长分段激励），鼓励持续突破而非“卡点达标”。
+   1. **避免僵化目标**：如佛罗里达销售团队因担心未来目标提高而刻意控制增长（仅超额10%）。  
+   2. **解决方案**：设计阶梯式奖励（如超额增长分段激励），鼓励持续突破而非「卡点达标」。
 
----
+#### 3. 管理启示与行动步骤
 
-### **三、管理启示与行动步骤**  
 1. **薪酬体系优化**  
-   - **对标市场与内部公平**：定期评估薪酬水平，确保与市场及内部同级岗位匹配。  
-   - **多元化激励**：结合货币（奖金、股权）与非货币激励（晋升、培训机会、荣誉认可）。
+   1. **对标市场与内部公平**：定期评估薪酬水平，确保与市场及内部同级岗位匹配。  
+   2. **多元化激励**：结合货币（奖金、股权）与非货币激励（晋升、培训机会、荣誉认可）。
 
 2. **晋升文化重塑**  
-   - **数据驱动决策**：建立基于绩效数据的晋升评估系统，减少主观判断。  
-   - **破除隐性壁垒**：识别并消除学历、性别等非绩效因素的晋升障碍。
+   1. **数据驱动决策**：建立基于绩效数据的晋升评估系统，减少主观判断。  
+   2. **破除隐性壁垒**：识别并消除学历、性别等非绩效因素的晋升障碍。
 
 3. **行为心理学应用**  
-   - **预防“相对剥夺”**：通过匿名薪酬调研、定期沟通减少员工不公平感。  
-   - **利用“超额奖励”效应**：赋予高潜力员工更多责任与资源，激发正向循环。
+   1. **预防「相对剥夺」**：通过匿名薪酬调研、定期沟通减少员工不公平感。  
+   2. **利用「超额奖励」效应**：赋予高潜力员工更多责任与资源，激发正向循环。
 
----
+#### 4. 系统性设计的关键原则
 
-### **四、系统性设计的关键原则**  
 1. **对齐战略目标**：薪酬与晋升机制需直接支持业务增长（如销售团队应奖励新市场开拓，而非仅存量增长）。  
 2. **动态适应性**：定期审视激励机制，随市场变化调整（如NBA球队根据球员表现更新合同）。  
 3. **全员透明化**：公开薪酬结构与晋升标准，减少猜疑，增强信任。
 
 ---
 
-**总结**：  
+#### 总结
+
 - **公平即生产力**：员工对公平的感知直接影响绩效，需将公平性嵌入组织架构设计。  
-- **超越“金钱激励”**：通过晋升机会、环境赋能等综合手段激发内在动机。  
-- **数据与人性化结合**：用行为经济学原理（如Daniel Kahneman的“损失厌恶”）优化制度，避免机械化考核。  
+- **超越「金钱激励」**：通过晋升机会、环境赋能等综合手段激发内在动机。  
+- **数据与人性化结合**：用行为经济学原理（如Daniel Kahneman的「损失厌恶」）优化制度，避免机械化考核。  
 
-**行动号召**：领导者需以“系统性公平”视角重构组织架构，将薪酬、晋升与非货币激励整合为驱动长期增长的引擎。
+**行动号召**：领导者需以「系统性公平」视角重构组织架构，将薪酬、晋升与非货币激励整合为驱动长期增长的引擎。
 
-## Prompt
+---
 
+### 附录：字幕
+
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 4: Designing and Changing the Organization's Architecture
@@ -103,3 +100,4 @@ Either way that goes we got a problem.
 The evidence is one of those nice research questions where the answer is not necessarily easy to forecast. The evidence goes this way that quote underpaid NBA players on the court do tend statistically speaking do want to prove to the team management that they are worthy a better compensation. How they do that? They take the ball more often, they shoot more frequently.
 
 Unfortunately, because they've taken the ball more often than statistically might be appropriate. They shoot more often for the same reason with that same downside. They shave about a point off the team score in a given game. They cost the team about a point. That's a way of saying as we move to pay and promotion as a design feature of the organization that we run. We want people regardless of background, gender, racial identity, anything you can think of that doesn't relate directly to performance. Once we move in that direction, lots of evidence says it's a great way to go. Companies all over the world are moving in that direction as well. We open up a kind of Pandora's box of the de-motivation that can come with inequity. And just to now reflect on the fact that this is a two sided problem in the NBA it has one side. A wonderful study that look to what happen temporarily when insurance underwriters had have specific company had to move out of their offices. Which were allocated according to their performance and seniority into temporary offices while their original offices were being remodeled. It's that simple as a rationale for what's happening. Some of those underwriters ended up in a very big office, just they have to go somewhere. Some ended up in a very small office. And then the question was, over time, do the underwriters change their underwriting, do they become more or less successful. Well, an amazing product, you can see it right in front of you right there of the inequity in the positive sense or in the negative sense. Those who are suddenly over-rewarded start performing better and those who are under-rewarded start performing less well. My guess is most people never thought about that, never said anything about I’m going to just hold back or I’m going to be really good because I got a large office. But going back to Behavioral Psychology, Behavioral Economics and Daniel Kahneman and his great book that sums a lot of this up. One more example of how we need to be in our organizational design. Mindful of the shortcomings and the assets on the positive side of how people will behave. According to our pay for performance, promotion for performance or in this case, literally the size of the office.
+```
