--- a/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.3 Organizational Design.md
+++ b/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.3 Organizational Design.md
@@ -1,69 +1,67 @@
----
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块4 - 组织架构设计与变革
 
-### **模块总结：组织架构的变革阻力与应对策略**
+### 课程4.3 组织架构的变革阻力与应对策略
 
-#### **核心主题**  
-本模块探讨组织架构的惯性如何阻碍变革，并基于John Kotter的变革理论，提出应对策略。通过案例分析了企业在市场变化（如全球化扩张）中面临的架构调整挑战，强调领导者需主动打破惯性，推动适应性设计。
+探讨组织架构的惯性如何阻碍变革，并基于John Kotter的变革理论，提出应对策略。通过案例分析了企业在市场变化（如全球化扩张）中面临的架构调整挑战，强调领导者需主动打破惯性，推动适应性设计。
 
----
+#### 1. 组织惯性的双重性
 
-### **关键结论与案例分析**
-
-#### **一、组织惯性的双重性**  
 1. **惯性作为稳定器与阻碍**  
-   - **正面作用**：成熟架构（如稳定流程、明确职责）可提升效率，形成自我维持的“飞轮效应”（如Rose公司分权化后的自主运营）。  
-   - **负面作用**：当外部环境剧变（如数字化、全球化），既有架构成为变革阻力（如员工抗拒调岗至新市场）。  
+   1. **正面作用**：成熟架构（如稳定流程、明确职责）可提升效率，形成自我维持的「飞轮效应」（如Rose公司分权化后的自主运营）。  
+   2. **负面作用**：当外部环境剧变（如数字化、全球化），既有架构成为变革阻力（如员工抗拒调岗至新市场）。  
 
 2. **案例：全球化扩张的挑战**  
-   - 企业原聚焦美国市场，招聘时未预见未来需开拓印度/巴西；当需外派时，员工抵触（“未签约国际任务”），架构与文化难以快速适配。
+   1. 企业原聚焦美国市场，招聘时未预见未来需开拓印度/巴西；当需外派时，员工抵触（「未签约国际任务」），架构与文化难以快速适配。
 
----
-
-#### **二、变革阻力的八大根源（Kotter模型）**  
+#### 2. 变革阻力的八大根源（Kotter模型）
 视频重点强调以下关键阻碍因素：  
 1. **缺乏紧迫感**  
-   - 管理者未能清晰传达变革必要性（如“市场已变，但员工照旧工作”）。  
+   1. 管理者未能清晰传达变革必要性（如「市场已变，但员工照旧工作」）。  
 2. **愿景沟通不足**  
-   - 变革目标需反复传达（如Rose公司需多次强调“分权化价值”），初期易遭质疑，需持续强化以建立信任。  
+   1。 变革目标需反复传达（如Rose公司需多次强调「分权化价值」），初期易遭质疑，需持续强化以建立信任。  
 3. **短期利益与成本冲突**  
-   - 员工关注变革成本（如培训、岗位调整），忽略长期收益（如新市场增长）。  
+   1. 员工关注变革成本（如培训、岗位调整），忽略长期收益（如新市场增长）。  
 
 **其他因素**（隐含在讨论中）：  
 - 未组建跨职能变革联盟  
 - 未系统化清除旧架构障碍（如冗余流程）  
 
----
+#### 3. 领导变革的关键步骤
 
-### **三、领导变革的关键步骤**  
 1. **制造紧迫感**  
-   - 用数据/案例说明“不变革的代价”（如市场份额流失、客户需求变化）。  
+   1. 用数据/案例说明「不变革的代价」（如市场份额流失、客户需求变化）。  
 2. **定义清晰愿景**  
-   - 将抽象目标转化为具体行动（如“分权化=区域经理全权负责本地决策”）。  
+   1. 将抽象目标转化为具体行动（如「分权化=区域经理全权负责本地决策」）。  
 3. **高频沟通与示范**  
-   - 通过多次会议、成功试点（如某区域先行改革）增强说服力。  
+   1. 通过多次会议、成功试点（如某区域先行改革）增强说服力。  
 4. **赋能中层与一线**  
-   - 组建跨层级变革小组，赋予决策权（如抽调精英开拓新市场）。  
+   1. 组建跨层级变革小组，赋予决策权（如抽调精英开拓新市场）。  
 5. **快速迭代与调整**  
-   - 避免“完美设计”，通过小步试错验证架构可行性（如阶段性评估分权效果）。  
+   1. 避免「完美设计」，通过小步试错验证架构可行性（如阶段性评估分权效果）。  
+
+### 4. 管理启示与行动框架
+
+1. **动态设计原则**  
+   1. 定期评估架构适配性（如每2年审查汇报关系、激励机制是否匹配战略）。  
+2. **文化柔性建设**  
+   1. 培养「变革韧性」（如轮岗制度、创新奖励），减少惯性依赖。  
+3. **员工参与式变革**  
+   1. 在架构调整中纳入员工反馈（如调研外派意愿，设计弹性职业路径）。  
 
 ---
 
-### **四、管理启示与行动框架**  
-1. **动态设计原则**  
-   - 定期评估架构适配性（如每2年审查汇报关系、激励机制是否匹配战略）。  
-2. **文化柔性建设**  
-   - 培养“变革韧性”（如轮岗制度、创新奖励），减少惯性依赖。  
-3. **员工参与式变革**  
-   - 在架构调整中纳入员工反馈（如调研外派意愿，设计弹性职业路径）。  
+#### 总结
 
-**总结**：  
-- **惯性管理**：善用惯性稳定运营，但需预设“架构弹性”（如预留跨职能协作接口）。  
+- **惯性管理**：善用惯性稳定运营，但需预设「架构弹性」（如预留跨职能协作接口）。  
 - **变革即常态**：将变革能力嵌入组织DNA，通过持续学习与敏捷响应应对外部变化。  
 
-**行动号召**：领导者需扮演“架构师+变革推动者”双重角色，平衡短期效率与长期适应性，将Kotter模型转化为可落地的阶段性计划。
+**行动号召**：领导者需扮演「架构师+变革推动者」双重角色，平衡短期效率与长期适应性，将Kotter模型转化为可落地的阶段性计划。
 
-## Prompt
+---
 
+### 附录：字幕
+
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 4: Designing and Changing the Organization's Architecture
@@ -100,3 +98,4 @@ Just briefly take a look, I'm not going to enumerate or expand out word-wise wha
 But for our purposes right now, we're going to try to do an organizational restructuring or redesign. I'd like you to take a look at those eight factors.
 
 Ask yourself which of those have you seen well executed maybe by yourself or others that you manage with. But get them much in mind because I want them to inform where we're going the next few minutes.
+```
