--- a/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.1 Designing and Changing Architecture.md
+++ b/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.1 Designing and Changing Architecture.md
@@ -1,53 +1,47 @@
-### **模块总结：组织架构设计与变革的关键要点**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块4 - 组织架构设计与变革
 
-#### **核心主题**  
-本模块探讨了组织架构对管理效能和员工绩效的深刻影响，强调架构设计（如职责划分、汇报关系、激励机制）需与企业战略匹配，并通过案例揭示了不平等和系统性障碍如何阻碍组织成功。以下是提炼的关键结论：
+### 课程4.1 架构设计与变革
 
----
+#### 1. 组织架构设计原则
 
-### **一、组织架构设计原则**
 1. **架构决定行为**  
-   - 组织架构（如职能型 vs. 分权型）直接影响员工的决策权、责任归属和协作模式。  
-   - **案例：Rose公司转型**  
-     - 原职能型架构中，区域财务主管向总部汇报，导致地方效率低下；改为分权架构后，区域经理全权负责本地职能团队，责任更明确，决策更灵活。
+   1. 组织架构（如职能型 vs. 分权型）直接影响员工的决策权、责任归属和协作模式。  
+   2. **案例：Rose公司转型**  
+      1. 原职能型架构中，区域财务主管向总部汇报，导致地方效率低下；改为分权架构后，区域经理全权负责本地职能团队，责任更明确，决策更灵活。
 
 2. **激励与惩罚的平衡**  
-   - 不合理的激励制度（如仅奖励超额目标的10%）可能导致员工隐藏创新或限制绩效（如佛罗里达销售团队故意控制增长，避免未来目标提高）。  
-   - **关键启示**：需设计动态激励机制，避免目标僵化，鼓励持续创新。
+   1. 不合理的激励制度（如仅奖励超额目标的10%）可能导致员工隐藏创新或限制绩效（如佛罗里达销售团队故意控制增长，避免未来目标提高）。  
+   2. **关键启示**：需设计动态激励机制，避免目标僵化，鼓励持续创新。
 
----
+#### 2. 员工行为背后的系统性驱动因素
 
-### **二、员工行为背后的系统性驱动因素**
-1. **“架构先于个人”原则**  
-   - 员工行为不仅由个人素质决定，更受组织架构（如晋升机制、考核标准）驱动。  
-   - **案例：Hausser食品公司**  
-     - 佛罗里达团队发现新市场（老年人、健身人群等）但隐瞒信息，根源在于公司未建立跨团队知识共享机制，且激励制度鼓励“局部最优”而非全局增长。
+1. **「架构先于个人」原则**  
+   1. 员工行为不仅由个人素质决定，更受组织架构（如晋升机制、考核标准）驱动。  
+   2. **案例：Hausser食品公司**  
+      1. 佛罗里达团队发现新市场（老年人、健身人群等）但隐瞒信息，根源在于公司未建立跨团队知识共享机制，且激励制度鼓励「局部最优」而非全局增长。
 
 2. **隐性不平等的影响**  
-   - **晋升障碍**：Jan Boyer（优秀区域经理）因缺乏大学学历未被提拔，反映“玻璃天花板”效应；  
-   - **创新抑制**：横向招聘的Brenda（MBA背景）与资深员工的潜在文化冲突，暴露组织对新旧经验的整合不足。
+   1. **晋升障碍**：Jan Boyer（优秀区域经理）因缺乏大学学历未被提拔，反映「玻璃天花板」效应；  
+   2. **创新抑制**：横向招聘的Brenda（MBA背景）与资深员工的潜在文化冲突，暴露组织对新旧经验的整合不足。
 
----
+#### 3. 领导组织变革的关键步骤
 
-### **三、领导组织变革的关键步骤**
 1. **诊断架构缺陷**  
-   - 识别系统性根源（如激励错配、晋升偏见），而非归咎个人（如案例中多数人认为问题在架构而非Jan本人）。
+   1. 识别系统性根源（如激励错配、晋升偏见），而非归咎个人（如案例中多数人认为问题在架构而非Jan本人）。
 
 2. **调整激励机制**  
-   - 避免单一目标导向，设计动态目标与奖励（如超额增长阶梯式奖励），鼓励长期创新。
+   1. 避免单一目标导向，设计动态目标与奖励（如超额增长阶梯式奖励），鼓励长期创新。
 
 3. **打破信息孤岛**  
-   - 建立跨部门/区域的知识共享机制（如案例中需将新市场策略推广至其他团队）。
+   1. 建立跨部门/区域的知识共享机制（如案例中需将新市场策略推广至其他团队）。
 
 4. **重塑晋升文化**  
-   - 基于绩效而非学历/资历晋升，消除隐性歧视（如Jan的案例）。
+   1. 基于绩效而非学历/资历晋升，消除隐性歧视（如Jan的案例）。
 
 5. **领导者的角色**  
-   - 需深入一线观察（如Brenda实地调研），理解员工真实动机，推动系统性变革而非表面调整。
+   1. 需深入一线观察（如Brenda实地调研），理解员工真实动机，推动系统性变革而非表面调整。
 
----
-
-### **四、关键结论**
+#### 4.关键结论
 1. **架构即战略**：组织设计需与业务目标一致，动态调整以应对市场变化。  
 2. **系统性视角**：员工问题常反映架构缺陷，需从激励、晋升、沟通机制入手解决。  
 3. **平等与透明**：消除晋升障碍、建立公平考核体系是释放人才潜力的关键。  
@@ -55,12 +49,16 @@
 
 ---
 
-**启示应用**：  
-- 企业应定期审视架构是否适配战略，通过激励机制和文化建设引导“组织公民行为”（如主动创新、知识共享）。  
-- 领导者需平衡“控制”与“赋能”，避免架构成为创新的枷锁。
+#### 启示应用 
 
-## Prompt
+- 企业应定期审视架构是否适配战略，通过激励机制和文化建设引导「组织公民行为」（如主动创新、知识共享）。  
+- 领导者需平衡「控制」与「赋能」，避免架构成为创新的枷锁。
 
+---
+
+### 附录：字幕
+
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 4: Designing and Changing the Organization's Architecture
@@ -121,3 +119,4 @@ people bring in a host of ideas, they have an ethical compass. They know how to 
 With that being said, let's take one more look at this chart, and if you look at the education background of the sales people in Florida, here's what's striking, at least to my eye. I'd like you to reach your own conclusion on this, and that is Brenda Cooper has not come up through the best sales team. She actually is a horizontal, a lateral hire, she came in, she actually did an MBA degree in a business school at university brought in. She's actually never sold baby food in that particular sense. That's fine, we often hire people. We see people come in above us, it happens all the time, it happens to me many times. That being said, what's striking to me is we look at the education column, and then the left column just to the left of that on the years with the company, Jan Boyer has been there for 30 years and runs the best sales team in the company, actually in the whole not just the region. And yet she's never been promoted. Maybe she didn't want to go up, but on the face of it, it looks to me like we may be looking at a glass ceiling to use that well known phrase. People can look up, but because they are not a college graduate, they're not going up. Probably not gender in this case, but who knows, that may be a factor. Maybe there's other demographic inhibitors in this particular company. And thus, to turn this around, maybe the first statement about organizational architecture we ought to hang onto is this. That the way we put incentive systems in place, the first topic of our course.
 
 And then number two, the way we promote people up through the hierarchy. However, it's defined, can have profound independent impact on their actions. Their behavior. And thus organizational designs for better or for worse, can indeed make their actions on behalf of the company.
+```
